[Win][Clang] error: non-constant-expression cannot be narrowed from type 'int' to 'SHORT' https://bugs.webkit.org/show_bug.cgi?id=189542

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (No behavior change).

* platform/graphics/win/IntPointWin.cpp:
(WebCore::IntPoint::operator POINTS const): Narrowed m_x and m_y by using static_cast.

Source/WebKit:

* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::platformCreateFrontendPage): Narrowed initialWindowWidth and initialWindowHeight by using static_cast.


Canonical link: https://commits.webkit.org/204522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235942 268f45cc-cd09-0410-ab3c-d52691b4dbfc